Name:                HPacman
Version:             0.1
Author:              Yakov Zhmurov
Maintainer:          zhmurov@ya.ru
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.2

Executable HPacman
  Main-is: Main.hs  
  build-depends: base -any, array -any, OpenGL >=2.6.0.1, GLUT, data-lens -any, data-lens-template -any, directory -any, filepath -any, containers -any, xml -any, HUnit -any, random
  hs-source-dirs: src
  ghc-options: -XNamedFieldPuns