Name:                HPacman
Version:             0.1
Author:              Yakov Zhmurov
Maintainer:          zhmurov@ya.ru
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.2

Executable HPacman
  Main-is: Main.hs  
  build-depends:
    -- Haskell platform
    base -any,
    array -any,
    OpenGL >=2.6.0.1, 
    GLUT,
    directory -any,
    filepath -any,
    containers -any,
    text,
    random,

    -- For engine
    system-filepath,
    fsnotify,

    -- For game
    xml -any,
    HUnit -any,
    data-lens -any,
    data-lens-template -any
  hs-source-dirs: src
  extensions: NamedFieldPuns BangPatterns
  ghc-options: -W -threaded -O2 -rtsopts